--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="papermain">
         <header>
             <nav>
-                <div class="logo"> <img src="photos/padhoindia.png" alt="xyz"></div>
+                <div class="logo"> <img src="Photos/padhoindia.webp" alt="xyz"></div>
                 <ul class="navbar">
                     <li><a href='/mocksyllabus.html' target="_blank">Syllabus</a></li>
                     <li><a href="#">About</a></li>
