--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="papermain">
         <header>
             <nav>
-                <div class="logo"> <img src="Photos/padhoindia.webp" alt="xyz"></div>
+                <div class="logo"> <img src="photos/padhoindia.webp" alt=""></div>
                 <ul class="navbar">
                     <li><a href='/mocksyllabus.html' target="_blank">Syllabus</a></li>
                     <li><a href="#">About</a></li>
@@ -141,7 +141,7 @@
     
     <section class="sec3test">
         <div class="mainlogo marginclass">
-            <img id="logoinpaperpage" src="photos/padhoindia.png" alt="">
+            <img id="logoinpaperpage" src="photos/padhoindia.webp" alt="">
         </div>
 
         <div class="contactandabout marginclass">
@@ -162,10 +162,10 @@
             </div>
 
             <div class="logosm marginforbeauty">
-                <a class="margin-beauty-smpage" href="https://www.facebook.com/Padho-INDia-102731288330537/"><img id="fb" src="Photos/fb.png" alt=""></a>
-                <a class="margin-beauty-smpage" href=""><img id="insta" src="Photos/insta.png" alt=""></a>
-                <a class="margin-beauty-smpage" href="https://twitter.com/PadhoD?s=09"><img id="twi" src="Photos/twitter.png" alt=""></a>
-                <a class="margin-beauty-smpage" href="https://twitter.com/PadhoD?s=09"><img id="yt" src="Photos/yt.png" alt=""></a>
+                <a class="margin-beauty-smpage" href="https://www.facebook.com/Padho-INDia-102731288330537/"><img id="fb" src="Photos/fb.webp" alt=""></a>
+                <a class="margin-beauty-smpage" href=""><img id="insta" src="Photos/insta.webp" alt=""></a>
+                <a class="margin-beauty-smpage" href="https://twitter.com/PadhoD?s=09"><img id="twi" src="Photos/twitter.webp" alt=""></a>
+                <a class="margin-beauty-smpage" href="https://twitter.com/PadhoD?s=09"><img id="yt" src="Photos/yt.webp" alt=""></a>
             </div>
 
         </div>
