--- a/mocksyllabus.html
+++ b/mocksyllabus.html
@@ -97,7 +97,7 @@
     <Header>
         <div class="syllabus-head-fit">
             <div class="logosyllabue syllabus-head-part">
-                <a href="index.html"><img src="Photos/padhoindia.png" alt=""></a>
+                <a href="index.html"><img src="Photos/padhoindia.webp" alt=""></a>
             </div>
             <div class="sylheading div-ka-bg syllabus-head-part">
                 <h1>PadhoINDia JEE Mock Test Series 2020</h1>
