--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="papermain">
         <header>
             <nav>
-                <div class="logo"> <img src="photos/padhoindia.webp" alt=""></div>
+                <div class="logo"> <img src="Photos/padhoindia.webp" alt=""></div>
                 <ul class="navbar">
                     <li><a href='/mocksyllabus.html' target="_blank">Syllabus</a></li>
                     <li><a href="#">About</a></li>
@@ -141,7 +141,7 @@
     
     <section class="sec3test">
         <div class="mainlogo marginclass">
-            <img id="logoinpaperpage" src="photos/padhoindia.webp" alt="">
+            <img id="logoinpaperpage" src="Photos/padhoindia.webp" alt="">
         </div>
 
         <div class="contactandabout marginclass">
