--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>IIT JEE PAPER</title>
     <link rel="stylesheet" href="mockpaper.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.   com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" media="screen and (max-width: 1244px) "href="mockpaperphone.css">
+    <link rel="stylesheet" media="screen and (max-width: 1244px) " href="mockpaperphone.css">
+    <link rel="icon" href="padhoindia.png" type="image/gif" >
 </head>
 
 <body>
@@ -23,9 +24,9 @@
                 <div class="logo"> <img src="padhoindia.png" alt=""></div>
                 <ul class="navbar">
                     <li><a href='/mocksyllabus.html' target="_blank">Syllabus</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    
+                    <li><a href="#sec3">About</a></li>
+                    <li><a href="#sec3">Contact</a></li>
+
                 </ul>
             </nav>
         </header>
@@ -138,39 +139,46 @@
 
     </section>
 
-    
-    <section class="sec3test">
-        <div class="mainlogo marginclass">
-            <img id="logoinpaperpage" src="padhoindia.png" alt="">
-        </div>
 
-        <div class="contactandabout marginclass">
-            <div class="aboutus marginforbeauty">
-
-                <a href="#">
-                    <h1 class="heading-font-size" >About Us</h1>
-                </a>
+    <section id="sec3">
+        <div class="sec3test">
+            <div class="mainlogo marginclass">
+                <img id="logoinpaperpage" src="padhoindia.png" alt="">
+                <h1>Present Free Mock Test Series 2020</h1>
             </div>
 
-            <div class="contactus marginforbeauty">
-                <h1 class="heading-font-size" >Contact Us</h1>
-                <p>padhoindia.free@gmail.com</p>
-            </div>
+            <div class="contactandabout marginclass">
+                <div class="aboutus marginforbeauty">
 
-            <div class="smpage marginforbeauty">
-                <h1 class="heading-font-size Follow-heading" >Follow Us</h1>
-            </div>
+                    <h1 class="heading-font-size">About Us</h1>
+                    <p>An initiative by IITians and NITians for JEE aspirants.<br> A team, wants to provide you
+                        free education.</p>
+                </div>
 
-            <div class="logosm marginforbeauty">
-                <a class="margin-beauty-smpage" href="https://www.facebook.com/Padho-INDia-102731288330537/"><img id="fb" src="fb.png" alt=""></a>
-                <a class="margin-beauty-smpage" href="https://www.instagram.com/padhoindia.free/"><img id="insta" src="insta.png" alt=""></a>
-                <a class="margin-beauty-smpage" href="https://twitter.com/PadhoD?s=09"><img id="twi" src="twitter.png" alt=""></a>
-                <a class="margin-beauty-smpage" href="https://www.youtube.com/channel/UC46MRn6M4KmZ_J1nn0ub9pA"><img id="yt" src="yt.png" alt=""></a>
-            </div>
+                <div class="contactus marginforbeauty">
+                    <h1 class="heading-font-size">Contact Us</h1>
+                    <p>padhoindia.free@gmail.com</p>
+                </div>
 
+                <div class="smpage marginforbeauty">
+                    <h1 class="heading-font-size Follow-heading">Follow Us</h1>
+                </div>
+
+                <div class="logosm marginforbeauty">
+                    <a target="_blank" class="margin-beauty-smpage" href="https://www.facebook.com/Padho-INDia-102731288330537/"><img
+                            id="fb" src="fb.png" alt=""></a>
+                    <a target="_blank" class="margin-beauty-smpage" href="https://www.instagram.com/padhoindia.free/"><img id="insta"
+                            src="insta.png" alt=""></a>
+                    <a target="_blank" class="margin-beauty-smpage" href="https://twitter.com/PadhoD?s=09"><img id="twi"
+                            src="twitter.png" alt=""></a>
+                    <a target="_blank"  class="margin-beauty-smpage" href="https://www.youtube.com/channel/UC-GNNuK_VNiWVZU_pEzD7Ug/featured"><img
+                            id="yt" src="yt.png" alt=""></a>
+                </div>
+
+            </div>
         </div>
     </section>
-     <footer id="foter">
+    <footer id="foter">
         <h3> copyright@PadhoINDia </h3>
     </footer>
 
