--- a/registration.html
+++ b/registration.html
@@ -22,7 +22,7 @@
                     <div class="tab-pane fade show active text-align form-new" id="home" role="tabpanel"
                         aria-labelledby="home-tab">
                         <h3 class="register-heading">Register For Jee Mock Test 2020 by PadhoINDia </h3>
-                        <p id="note" class="register-heading">*Please Fill Registeration Form in Given Formet, Click at Register and Wait till 10sec </p>
+                        <p id="note" class="register-heading">*Please Fill Registeration Form in Given Format, Click at Register and Wait till 10sec </p>
                         <div class="row register-form">
                             <div class="col-md-12">
                                 <form method="post" autocomplete="off" name="google-sheet">
