--- a/registration.html
+++ b/registration.html
@@ -50,7 +50,7 @@
 
                                     <div class="form-group">
                                         <input type="submit" name="submit" class="Registerbtn btnSubmit btn-block"
-                                            value="Register" />
+                                            value="Register by Clicking Once" />
                                     </div>
                                 </form>
                             </div>
