--- a/test1.html
+++ b/test1.html
@@ -1,10 +1,25 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-<title>Padho India quiz</html>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IIT JEE PAPER</title>
+    <link rel="stylesheet" href="mockpaper.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" media="screen and (max-width: 1244px) "href="mockpaperphone.css">
 </head>
+
 <body>
 <iframe name='proprofs' id='proprofs' width='100%' height='100%' frameborder=0 marginwidth=0 marginheight=0 src='https://www.proprofs.com/quiz-school/story.php?title=mjk4njuzoa62lm&id=2986486&ew=430'>
 </iframe>
-<div style='font-size:10px; font-family:Arial, Helvetica, sans-serif; text-align:left;'><a href='https://www.proprofs.com/quiz-school/story.php?title=mjk4njuzoa62lm' target='_blank' title='Untitled Quiz by ProProfs'>Untitled Quiz by ProProfs</a> » <a href='https://www.proprofs.com/quiz-school/' title='Quiz from ProProfs' target='_blank' rel='nofollow'>Quiz from ProProfs</a></div>
+<div style='font-size:10px; font-family:Arial, Helvetica, sans-serif; text-align:left;'><a href='https://www.proprofs.com/quiz-school/story.php?title=mjk4njuzoa62lm' target='_blank' title='Untitled Quiz by ProProfs'>Untitled Quiz by ProProfs</a> » <a href='https://www.proprofs.com/quiz-school/' title='Quiz from ProProfs' target='_blank' rel='nofollow'>Quiz from ProProfs</a></div>
+    
 </body>
+
 </html>
