--- a/test1.html
+++ b/test1.html
@@ -20,6 +20,8 @@
 </iframe>
 <div style='font-size:10px; font-family:Arial, Helvetica, sans-serif; text-align:left;'><a href='https://www.proprofs.com/quiz-school/story.php?title=mjk4njuzoa62lm' target='_blank' title='Untitled Quiz by ProProfs'>Untitled Quiz by ProProfs</a> » <a href='https://www.proprofs.com/quiz-school/' title='Quiz from ProProfs' target='_blank' rel='nofollow'>Quiz from ProProfs</a></div>
     
+    
+    <iframe name='proprofs' id='proprofs' width='650' height='700' frameborder=0 marginwidth=0 marginheight=0 src='https://www.proprofs.com/quiz-school/ugc/story.php?title=mjk4njuzoa62lm&id=2986486&ew=630'></iframe><div style='font-size:10px; font-family:Arial, Helvetica, sans-serif; color:#000;text-align:left;'><a href='https://www.proprofs.com/quiz-school/ugc/story.php?title=mjk4njuzoa62lm' target='_blank' title='Untitled Quiz'>Untitled Quiz</a></div>
 </body>
 
 </html>
