--- a/registration.html
+++ b/registration.html
@@ -21,40 +21,13 @@
                 <div class="col-md-12">
                     <div class="tab-pane fade show active text-align form-new" id="home" role="tabpanel"
                         aria-labelledby="home-tab">
-                        <h3 class="register-heading">Register For Jee Mock Test 2020 by PadhoINDia </h3>
-                        <p id="note" class="register-heading">*Please Fill Registeration Form in Given Format, Click at Register and Wait till 10sec </p>
-                        <div class="row register-form">
-                            <div class="col-md-12">
-                                <form method="post" autocomplete="off" name="google-sheet">
-                                    <div class="form-group">
-                                        <input type="text" name="Name" class="Registerbtn" placeholder="Your Name *"
-                                            value="" required="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="email" name="Email" class="Registerbtn" placeholder="Your Email *"
-                                            value="" required="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="number" name="Phone" class="Registerbtn"
-                                            placeholder="Your Contact Number *" value="" required="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="Text" name="Year" class="Registerbtn"
-                                            placeholder="Fresher / Droper / 2nd Droper*" value="" required="" />
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="Text" name=" Testtype" class="Registerbtn"
-                                            placeholder="All / 1st / 2nd / 3rd / 4th / 5th*" value="" required="" />
-                                    </div>
-
-
-                                    <div class="form-group">
-                                        <input type="submit" name="submit" class="Registerbtn btnSubmit btn-block"
-                                            value="Register by Clicking Once" />
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                        <h3 class="register-heading">Registration Is Full</h3>
+                        <p id="note" class="register-heading">*Test Date is Postponed now.</p>
+                        <p>We will back soon</p>
+                        <h4>For More Information Join Our Telegram Channel</h4>
+                        <br>
+                        <br>
+                        <a id="telegram_channel"  href="https://t.me/pdhoindia">Telegram Channel</a>
                     </div>
                 </div>
             </div>
@@ -71,9 +44,13 @@
         form.addEventListener('submit', e => {
             e.preventDefault()
             fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
-                .catch(error => console.error('Error!', error.message))
+                // .then(response => alert("Thanks for Contacting us..! We Will Contact You Soon..."))
+                // .catch(error => console.error('Error!', error.message))
         })
+        function Opensite(url) {
+            var win = window.open(url, '_blank');
+        }
+
     </script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
