--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="datespecial">
                     <div class="papertype1">
                         <h1>Minor Test-2</h1>
-                        <p>Date- Available Soo</p>
+                        <p>Date- Available Soon</p>
                     </div>
                     <div class="papertype2">
                         <div class="containerwetage">
@@ -83,7 +83,7 @@
                 <div class="datespecial">
                     <div class="papertype1">
                         <h1>Minor Test-3</h1>
-                        <p>Date- Available Soo</p>
+                        <p>Date- Available Soon</p>
                     </div>
                     <div class="papertype2">
                         <div class="containerwetage">
@@ -100,7 +100,7 @@
                 <div class="datespecial">
                     <div class="papertype1">
                         <h1>Major Test-1</h1>
-                        <p>Date- Available Soo</p>
+                        <p>Date- Available Soon</p>
                     </div>
                     <div class="papertype2">
                         <div class="containerwetage">
@@ -117,7 +117,7 @@
                 <div class="datespecial">
                     <div class="papertype1">
                         <h1>Major Test-2</h1>
-                        <p>Date- Available Soo</p>
+                        <p>Date- Available Soon</p>
                     </div>
                     <div class="papertype2">
                         <div class="containerwetage">
