--- a/registration.html
+++ b/registration.html
@@ -27,6 +27,9 @@
                         <h4>For More Information Join Our Telegram Channel</h4>
                         <br>
                         <br>
+                        
+                        <a id="telegram_channel"  href="https://www.mentomeet.com/mentee/mocktest">Website Link</a>
+                        <a id="telegram_channel"  href="https://play.google.com/store/apps/details?id=com.bansalapps.padoIndia">Application Link</a>
                         <a id="telegram_channel"  href="https://t.me/pdhoindia">Telegram Channel</a>
                     </div>
                 </div>
