--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 Mathematics 33% <br>
                                 Chemistry 33% <br>
                                 Physics 33%</p>
-                            <a class="registerdown realregistration" href='https://play.google.com/store/apps/details?id=com.bansalapps.padoIndia'>Register Now</a>
+                            <a class="registerdown realregistration" href='registration.html'>Register Now</a>
                         </div>
 
                     </div>
